# music-rpc

./: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  prebuild-macos.sh  vite.config.js
.zed/: settings.json
api/: README.md  package.json  wrangler.jsonc
api/src/: index.js
cloudflared/: .gitignore  install.js
src/: App.jsx  main.js  main.jsx  state.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  commands.rs  error.rs  lib.rs  main.rs  media.rs  rpc.rs  state.rs
src-tauri/src/commands/: media.rs  rpc.rs
src-tauri/src/media/: mac.rs  serve.rs  win.rs
src-tauri/src/media/mac/: media_remote.rs
src-tauri/src/rpc/: codec.rs  unix.rs  win.rs
