[package]
name = "music-rpc"
version = "0.0.0"
description = "A Tauri App"
authors = ["Will Nelson"]
edition = "2024"
rust-version = "1.88"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
dotenv-build = "0.1.1"
tauri-build = { version = "2", features = [] }

[lib]
name = "music_rpc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
anyhow = "1.0.80"
arrayvec = "0.7.6"
axum = "0.8.4"
base64 = "0.22.1"
blake3 = "1.8.2"
futures = "0.3.30"
jiff = { version = "0.2.15", features = ["serde"] }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
tokio = { version = "1.36.0", features = ["process", "rt"] }
tokio-stream = { version = "0.1.17", features = ["io-util", "sync"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ulid = { version = "1.2.1", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60", features = ["Media_Control", "Storage_Streams"] }
windows-core = "0.60"
windows-future = "0.1"
windows-sys = "0.59.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
